<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeFragment">

    <LinearLayout
        android:id="@+id/add_re"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_add_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginVertical="10dp"
            android:text="@string/fragment_add_recipe_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:importantForAutofill="auto"
            android:inputType="text"
            android:text="@string/fragment_add_recipe_name" />

        <EditText
            android:id="@+id/add_recipe_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/fragment_add_recipe_des" />

        <EditText
            android:id="@+id/add_recipe_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/view_recipe_ingredient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_recipe_is_private" />

            <Switch
                android:id="@+id/add_recipe_is_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Spinner
            android:id="@+id/add_recipe_spinner"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:entries="@array/add_recipe_types" />

        <Button
            android:id="@+id/add_recipe_btn"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:text="@string/fragment_add_recipe_btn" />

    </LinearLayout>
</FrameLayout>